# AirportSimulator

./: CMakeLists.txt  Display.cpp  Display.h  README.md  Search.h  imgui.ini  main.cpp  verification.json
src/: CompareController.cpp  CompareController.h  CompareResponseMotor.cpp  CompareResponseMotor.h  RegulationService.cpp  RegulationService.h  SearchController.cpp  SearchController.h  main.cpp
src/Model/: MarkerCandidate.h  MarkerKind.h  Query.h  Response.h  Status.h
src/UI/: DatePickerPanel.cpp  DatePickerPanel.h  MainWindow.cpp  MainWindow.h  ResultsPanel.cpp  ResultsPanel.h  SearchPanel.cpp  SearchPanel.h
src/Utilities/: MarkerCycle.cpp  MarkerCycle.h  MarkerDetector.cpp  MarkerDetector.h
